--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -54,6 +54,7 @@ androidx_lifecycle_viewModel = { module = "androidx.lifecycle:lifecycle-viewmode
 androidx_lifecycle_viewModelSavedState = { module = "androidx.lifecycle:lifecycle-viewmodel-savedstate", version.ref = "androidx_lifecycle" }
 androidx_lifecycle_runtime = { module = "androidx.lifecycle:lifecycle-service", version.ref = "androidx_lifecycle" }
 androidx_lifecycle_process = { module = "androidx.lifecycle:lifecycle-process", version.ref = "androidx_lifecycle" }
+androidx_lifecycle_compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx_lifecycle" }
 androidx_lifecycle_viewModelCompose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidx_lifecycle" }
 androidx_core = { module = "androidx.core:core-ktx", version.ref = "androidx_core" }
 androidx_annotation = { module = "androidx.annotation:annotation", version.ref = "androidx_annotation" }
@@ -75,6 +76,7 @@ androidx_test_runner = { module = "androidx.test:runner", version.ref = "android
 androidx_test_rules = { module = "androidx.test:rules", version.ref = "androidx_test_core" }
 koin_core = { module = "io.insert-koin:koin-core", version.ref = "koin_core" }
 koin_android_core = { module = "io.insert-koin:koin-android", version.ref = "koin_android" }
+koin_android_compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin_android" }
 koin_android_workManager = { module = "io.insert-koin:koin-androidx-workmanager", version.ref = "koin_android" }
 koin_test_core = { module = "io.insert-koin:koin-test", version.ref = "koin_core" }
 koin_test_jUnit4 = { module = "io.insert-koin:koin-test-junit4", version.ref = "koin_core" }
