--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -82,12 +82,8 @@ koin_test_core = { module = "io.insert-koin:koin-test", version.ref = "koin_core
 koin_test_jUnit4 = { module = "io.insert-koin:koin-test-junit4", version.ref = "koin_core" }
 sqlDelight_androidDriver = { module = "com.squareup.sqldelight:android-driver", version.ref = "sqlDelight" }
 sqlDelight_coroutinesExtensions = { module = "com.squareup.sqldelight:coroutines-extensions", version.ref = "sqlDelight" }
-ktor_client_core = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
-ktor_client_android = { module = "io.ktor:ktor-client-android", version.ref = "ktor" }
-ktor_client_cio = { module = "io.ktor:ktor-client-cio", version.ref = "ktor" }
-ktor_client_logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
-ktor_client_contentNegotation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
-ktor_client_auth = { module = "io.ktor:ktor-client-auth", version.ref = "ktor" }
+ktor_server_core = { module = "io.ktor:ktor-server-core", version.ref = "ktor" }
+ktor_server_cio = { module = "io.ktor:ktor-server-cio", version.ref = "ktor" }
 ktor_serialization = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
 kotest_runner_jUnit5 = { module = "io.kotest:kotest-runner-junit5", version.ref = "kotest_core" }
 kotest_runner_jUnit5Jvm = { module = "io.kotest:kotest-runner-junit5-jvm", version.ref = "kotest_core" }
