--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,7 +22,7 @@ koin_bom = "3.5.1"
 logcat = "0.1"
 junit = "4.13.2"
 androidx_test_core = "1.5.2"
-androidx_test_extJUnit = "1.1.5"
+androidx_test_ext_junit = "1.1.5"
 androidx_espresso = "3.5.1"
 dokka = "1.8.10"
 mockK = "1.13.7"
@@ -73,7 +73,7 @@ androidx_espresso_accessibility = { module = "androidx.test.espresso:espresso-ac
 androidx_espresso_idlingResource = { module = "androidx.test.espresso:espresso-idling-resource", version.ref = "androidx_espresso" }
 androidx_espresso_idlingConcurrent = { module = "androidx.test.espresso.idling:idling-concurrent", version.ref = "androidx_espresso" }
 androidx_test_core = { module = "androidx.test:core-ktx", version.ref = "androidx_test_core" }
-androidx_test_ext_jUnit = { module = "androidx.test.ext:junit-ktx", version.ref = "androidx_test_extJUnit" }
+androidx_test_ext_junit = { module = "androidx.test.ext:junit-ktx", version.ref = "androidx_test_ext_junit" }
 androidx_test_ext_truth = { module = "androidx.test.ext:truth", version.ref = "androidx_test_core" }
 androidx_test_runner = { module = "androidx.test:runner", version.ref = "androidx_test_core" }
 androidx_test_rules = { module = "androidx.test:rules", version.ref = "androidx_test_core" }
