--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,6 @@
     <application
         android:name=".CallMonitorApplication"
         android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -21,7 +19,7 @@
         android:theme="@style/Theme.CallMonitor"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".activity.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.CallMonitor">
@@ -32,7 +30,7 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".PhoneCallMonitorService" />
+        <service android:name=".service.PhoneCallMonitorService" />
 
         <provider
             android:name="androidx.startup.InitializationProvider"
