--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,16 +7,10 @@ kotlinx_serialization = "1.6.0"
 desugarJdkLibs = "2.0.3"
 androidx_compose_bom = "2023.09.00"
 androidx_compose_compiler = "1.5.3"
-androidx_appCompat = "1.6.1"
 androidx_appStartup = "1.1.1"
-androidx_annotation = "1.7.0"
 androidx_core = "1.12.0"
 androidx_activity = "1.7.2"
 androidx_lifecycle = "2.6.2"
-androidx_savedState = "1.2.1"
-androidx_work = "2.8.1"
-androidx_dataStore = "1.0.0"
-sqlDelight = "2.0.0"
 ktor = "2.3.4"
 koin_bom = "3.5.1"
 logcat = "0.1"
@@ -24,7 +18,6 @@ junit = "4.13.2"
 androidx_test = "1.5.2"
 androidx_test_core = "1.5.0"
 androidx_test_ext_junit = "1.1.5"
-androidx_espresso = "3.5.1"
 dokka = "1.9.0"
 mockK = "1.13.2"
 robolectric = "4.10.3"
@@ -52,28 +45,14 @@ androidx_compose_material3 = { module = "androidx.compose.material3:material3" }
 androidx_compose_materialIconsExtended = { module = "androidx.compose.material:material-icons-extended" }
 androidx_compose_uiTestJunit4 = { module = "androidx.compose.ui:ui-test-junit4" }
 androidx_compose_uiTestManifest = { module = "androidx.compose.ui:ui-test-manifest" }
-androidx_appCompat_core = { module = "androidx.appcompat:appcompat", version.ref = "androidx_appCompat" }
-androidx_appCompat_resources = { module = "androidx.appcompat:appcompat", version.ref = "androidx_appCompat" }
 androidx_appStartup = { module = "androidx.startup:startup-runtime", version.ref = "androidx_appStartup" }
 androidx_lifecycle_viewModel = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidx_lifecycle" }
-androidx_lifecycle_viewModelSavedState = { module = "androidx.lifecycle:lifecycle-viewmodel-savedstate", version.ref = "androidx_lifecycle" }
 androidx_lifecycle_runtime = { module = "androidx.lifecycle:lifecycle-service", version.ref = "androidx_lifecycle" }
 androidx_lifecycle_process = { module = "androidx.lifecycle:lifecycle-process", version.ref = "androidx_lifecycle" }
 androidx_lifecycle_compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx_lifecycle" }
 androidx_lifecycle_viewModelCompose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidx_lifecycle" }
 androidx_core = { module = "androidx.core:core-ktx", version.ref = "androidx_core" }
-androidx_annotation = { module = "androidx.annotation:annotation", version.ref = "androidx_annotation" }
 androidx_activity_compose = { module = "androidx.activity:activity-compose", version.ref = "androidx_activity" }
-androidx_savedState = { module = "androidx.savedstate:savedstate-ktx", version.ref = "androidx_savedState" }
-androidx_work = { module = "androidx.work:work-runtime-ktx", version.ref = "androidx_work" }
-androidx_dataStore_core = { module = "androidx.datastore:datastore", version.ref = "androidx_dataStore" }
-androidx_dataStore_preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "androidx_dataStore" }
-androidx_espresso_core = { module = "androidx.test.espresso:espresso-core", version.ref = "androidx_espresso" }
-androidx_espresso_contrib = { module = "androidx.test.espresso:espresso-contrib", version.ref = "androidx_espresso" }
-androidx_espresso_intents = { module = "androidx.test.espresso:espresso-intents", version.ref = "androidx_espresso" }
-androidx_espresso_accessibility = { module = "androidx.test.espresso:espresso-accessibility", version.ref = "androidx_espresso" }
-androidx_espresso_idlingResource = { module = "androidx.test.espresso:espresso-idling-resource", version.ref = "androidx_espresso" }
-androidx_espresso_idlingConcurrent = { module = "androidx.test.espresso.idling:idling-concurrent", version.ref = "androidx_espresso" }
 androidx_test_core = { module = "androidx.test:core-ktx", version.ref = "androidx_test_core" }
 androidx_test_ext_junit = { module = "androidx.test.ext:junit-ktx", version.ref = "androidx_test_ext_junit" }
 androidx_test_ext_truth = { module = "androidx.test.ext:truth", version.ref = "androidx_test" }
@@ -87,8 +66,6 @@ koin_android_workManager = { module = "io.insert-koin:koin-androidx-workmanager"
 koin_ktor = { module = "io.insert-koin:koin-ktor" }
 koin_test_core = { module = "io.insert-koin:koin-test" }
 koin_test_junit4 = { module = "io.insert-koin:koin-test-junit4" }
-sqlDelight_androidDriver = { module = "com.squareup.sqldelight:android-driver", version.ref = "sqlDelight" }
-sqlDelight_coroutinesExtensions = { module = "com.squareup.sqldelight:coroutines-extensions", version.ref = "sqlDelight" }
 ktor_server_core = { module = "io.ktor:ktor-server-core", version.ref = "ktor" }
 ktor_server_cio = { module = "io.ktor:ktor-server-cio", version.ref = "ktor" }
 ktor_server_contentNegotiation = { module = "io.ktor:ktor-server-content-negotiation", version.ref = "ktor" }
@@ -104,13 +81,10 @@ turbine = { module = "app.cash.turbine:turbine", version.ref = "turbine" }
 konsist = { module = "com.lemonappdev:konsist", version.ref = "konsist" }
 
 [plugins]
-androidApplication = { id = "com.android.application", version.ref = "androidGradlePlugin" }
+android_application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
+android_library = { id = "com.android.library", version.ref = "androidGradlePlugin" }
+kotlin_jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin_android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin_serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
-org-jetbrains-kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
-com-android-library = { id = "com.android.library", version.ref = "androidGradlePlugin" }
 dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 dokka_android = { id = "org.jetbrains.dokka:android-documentation-plugin", version.ref = "dokka" }
-
-[bundles]
-
